fixed z-index bug for the toolbar

--- a/app/src/components/sidebar/Sidebar.css
+++ b/app/src/components/sidebar/Sidebar.css
@@ -7,7 +7,7 @@
   overflow: hidden;
 }
 .sidebar {
-  zIndex: 2;
+  z-index: 3;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -39,7 +39,7 @@
   background-color: rgba(0;0;0;.3);
 }
 .dragHandle {
-  z-index: 1;
+  z-index: 2;
   position: fixed;
   top: 0;
   bottom: 0;
