--- a/app/src/components/toolbar/Toolbar.css
+++ b/app/src/components/toolbar/Toolbar.css
@@ -1,16 +1,17 @@
 .toolbar {
+	position: fixed;
+	bottom: 0;
+	left: 50%;
+	transform: translate(-50%);
+  margin: 0 auto;
+	z-index: 1;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	position: fixed;
-  bottom: 0;
-  width: 100%;
-	position: fixed;
-	z-index: 1;
 }
 
-
 #delete, #save, #undo, #color {
+	position: relative;
 	margin: 0 30px 50px 0;
 	background-color: #2EC4B6;
 }
